[AIOTAL-722] Fixed some of ui gaps in configuration

--- a/src/app/superadmin/superadminmetrics/superadminmetrics.component.scss
+++ b/src/app/superadmin/superadminmetrics/superadminmetrics.component.scss
@@ -102,8 +102,8 @@ background-color: #7cb5ec !important;
 
 }
 h5.teus {
-margin-left: 553px;
-width: 26%;
+  margin-left: 507px;
+  width: 39%;
 }
 ngx-tooltip-content.ngx-charts-tooltip-content.type-tooltip {
 .tooltip-caret.position-top {
